name:           enummapset
version:        0.6.0.1
synopsis:       IntMap and IntSet with Enum keys/elements.
description:    This package contains simple wrappers around 'Data.IntMap' and
                'Data.IntSet' with 'Enum' keys and elements respectively.
                Especially useful for 'Int's wrapped with newtype.
homepage:       https://github.com/Mikolaj/enummapset
bug-reports:    https://github.com/Mikolaj/enummapset/issues
license:        BSD3
license-file:   LICENSE
author:         Michal Terepeta
maintainer:     Mikolaj Konarski <mikolaj.konarski@funktory.com>
category:       Data
build-type:     Simple

cabal-version:  >=1.6

source-repository head
  type:         git
  location:     https://github.com/Mikolaj/enummapset.git

flag debug
  description:  Debug build (more warnings, etc.)
  default:      False

Library
  exposed-modules:
    Data.EnumMap
    Data.EnumMap.Lazy
    Data.EnumMap.Strict
    Data.EnumSet

  other-modules:
    Data.EnumMap.Base

  build-depends:
    base < 5,
    containers >= 0.5.2 && < 0.7,
    semigroups >=0.1 && <1.0,
    deepseq

  if flag(debug)
    ghc-options: -Wall
